Fixed layout bug when closing all window and reopening components

--- a/src/app/components/flow-nodes-list-component/flow-nodes-list.component.scss
+++ b/src/app/components/flow-nodes-list-component/flow-nodes-list.component.scss
@@ -1,8 +1,10 @@
 @import '../../../stylesheets/colors';
 
 flow-nodes-list {
-  display: flex;
-  flex-direction: column;
+  & > .components {
+    display: flex;
+    flex-direction: column;
+  }
 
 }
 
