--- a/src/stylesheets/components.scss
+++ b/src/stylesheets/components.scss
@@ -1,6 +1,6 @@
 flow-nodes-list , .jointsjs {
 
-  & > .components {
+  .components {
     padding: 0 10px;
 
     & > .component {
