--- a/src/stylesheets/loading-screen.scss
+++ b/src/stylesheets/loading-screen.scss
@@ -47,11 +47,11 @@
       10% {transform: translateY(-18px);}
       14% {transform: translateY(-18px);}
       25% {transform: translateY(0px);}
-      35% {transform: translateY(-12px);}
-      39% {transform: translateY(-12px);}
+      35% {transform: translateY(-10px);}
+      39% {transform: translateY(-10px);}
       47% {transform: translateY(0px);}
-      53% {transform: translateY(-6px);}
-      57% {transform: translateY(-6px);}
+      53% {transform: translateY(-4px);}
+      57% {transform: translateY(-4px);}
       65% {transform: translateY(0px);}
     }
 
